# CoolGL

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  hello.cpp
blender/: cat_tutorial.blend
blender/Low Poly Cat Starter File/: Starter File_Low Poly Cat.blend  Starter File_Low Poly Cat.blend1
include/glad/: glad.h
scripts/: rebuild.sh
src/: doge.cpp  experiment.cpp  glad.c  main.cpp
src/demo/: batching.cpp  cat.cpp  dancing_triangle.cpp  doge.cpp  experiment.cpp  instancedcat.cpp  instancedcat_wave.cpp  just_sky.cpp  lotsacats.cpp  monkey.cpp
src/engine/: Application.cpp  Application.h  Component.h  GameObject.cpp  GameObject.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  ModelLoader.cpp  ModelLoader.h  Renderer.cpp  Renderer.h  Rotator.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Transform.cpp  Transform.h  Window.cpp  Window.h  application.cpp  application.h  camera.cpp  camera.h  component.h  game_object.cpp  game_object.h  i_input_listener.h  input_manager.cpp  input_manager.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_creator.cpp  mesh_creator.h  (+20 more)
src/engine/debug/: debug_camera_controller.cpp  debug_camera_controller.h
src/engine/shaders/: lit.frag  lit.vert  lit_advanced_shadows.frag  lit_enhanced_neck_shadows.frag  lit_wave.vert
